package at.htl.entity;

public enum Lessontype {
    BALLET,
    HIPHOP,
    STANDARDTANZ_EINSTEIGER,
    STANDARDTANZ_FORTGESCHRITTENE,
    STANDARDTANZ_PROFIS
}
